[gd_scene load_steps=5 format=3 uid="uid://xen44dgkpsii"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_5abfd"]
[ext_resource type="ArrayMesh" uid="uid://b6krway4ugi6y" path="res://Models/Head.tres" id="3_wu3pi"]
[ext_resource type="Script" path="res://Scenes/sprite_3d.gd" id="4_q1fyy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_72rtc"]
radius = 0.819437
height = 3.02778

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_mask = 15
script = ExtResource("1_5abfd")

[node name="Head" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25501, 0)
mesh = ExtResource("3_wu3pi")

[node name="Sprite3D" type="Sprite3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(-8.30516e-09, 0, 0.19, 0, 0.19, 0, -0.19, 0, -8.30516e-09, 0.861312, 0, 0)
script = ExtResource("4_q1fyy")

[node name="Shooters" type="Node3D" parent="Head/Sprite3D"]
transform = Transform3D(-2.3006e-07, 0, -5.26316, 0, 5.26316, 0, 5.26316, 0, -2.3006e-07, 1.98153e-07, 0.000579357, -4.53322)

[node name="L" type="Marker3D" parent="Head/Sprite3D/Shooters"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="L_front" type="Marker3D" parent="Head/Sprite3D/Shooters/L"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 9.0003e-05)

[node name="M" type="Marker3D" parent="Head/Sprite3D/Shooters"]

[node name="M_front" type="Marker3D" parent="Head/Sprite3D/Shooters/M"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 9.0003e-05)

[node name="R" type="Marker3D" parent="Head/Sprite3D/Shooters"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="R_front" type="Marker3D" parent="Head/Sprite3D/Shooters/R"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.22853, 0)
shape = SubResource("CapsuleShape3D_72rtc")

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2.37297, 0)
spring_length = 10.0

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]

[node name="BulletCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="InfectionCountdown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="MolotovCountdown" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BulletCooldown" to="." method="_on_bullet_cooldown_timeout"]
[connection signal="timeout" from="InfectionCountdown" to="." method="_on_infection_countdown_timeout"]
[connection signal="timeout" from="MolotovCountdown" to="." method="_on_molotov_countdown_timeout"]
